@@ -10,8 +10,14 @@ require 'C:\xampp\htdocs\vittaclinic2\sistema\conexao.php';
 </head>
 <body>
     <a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a>
-    <p>Usuário: * Tipo: *</p>
-    <p><a href="/vittaclinic2/paginas/comum/entrar.php">Entrar/Registrar</a></p>
+    <?php //Sistema que escreve o usuario.
+    if (isset($_SESSION['email'])) {
+        echo 'usuario: ' . $_SESSION['email'] . ' tipo: ' . $_SESSION['tipodeusuario'];
+    } else {
+        echo '<p><a href="/vittaclinic2/paginas/comum/entrar.php">Entrar/Registrar</a></p>';
+    }
+    ?>
     <p><a href="/vittaclinic2/paginas/pacientes/marcar-consulta.php">Marcar Consulta</a></p>
+    <p><a href="/vittaclinic2/paginas/comum/sair.php">Sair</a></p>
 </body>
 </html>
