@@ -3,60 +3,38 @@ session_start();
 require 'C:\xampp\htdocs\vittaclinic2\sistema\conexao.php';
 ?>
 <?php
-if(!isset($email)) {
+if(!isset($_SESSION['email'])) {
     $email = "";
     $senha = "";
+} else {
+    header('location: /vittaclinic2/index.php');
 }
 //Pegar o valor do formulário.
 if($_SERVER['REQUEST_METHOD'] == "POST") {
-    $email = ($_POST['email']);
-    $senha = ($_POST['senha']);
+    $email = $_POST['email'];
+    $senha = $_POST['senha'];
 }
-//Preparo da declaração.
-$tabela = "tabela_administradores";
-$stmt = $conn->prepare("SELECT email, senha FROM $tabela WHERE email='$email' AND senha='$senha'");
-$stmt->execute();
-//Trás como array associativo, onde as chaves são os nomes das colunas.
-$resultado =$stmt->SetFetchMode(PDO::FETCH_ASSOC);
-//Transforma o statement em um array que eu posso usar.
-foreach($stmt as $usuario);
-if (isset($usuario['email'])) {
-    if (($usuario['email'] == $email)) {
-        if($usuario['senha'] == $senha) {
-            $_SESSION['email'] = $email;
-            $_SESSION['tipodeusuario'] = "administrador";
-        } else {
-            echo 'verifique sua senha';
-        }
-    } else {
-        $tabela = "tabela_medicos";
-        $stmt = $conn->prepare("SELECT email, senha FROM $tabela WHERE email='$email' AND senha='$senha'");
-        $stmt->execute();
-        $resultado =$stmt->SetFetchMode(PDO::FETCH_ASSOC);
-        foreach($stmt as $usuario);
-        if (($usuario['email'] == $email)) {
-            if($usuario['senha'] == $senha) {
+if (!isset($_SESSION['email'])) {
+    //Preparo da declaração.
+    $stmt = $conn->prepare("SELECT email, senha, tipo FROM tabela_administradores WHERE email='$email' AND senha='$senha'
+    UNION SELECT email, senha, tipo FROM tabela_medicos WHERE email='$email' AND senha='$senha'
+    UNION SELECT email, senha, tipo FROM tabela_pacientes WHERE email='$email' AND senha='$senha'");
+    $stmt->execute();
+    //Trás como array associativo, onde as chaves são os nomes das colunas.
+    $usuario = $stmt->fetch(PDO::FETCH_ASSOC);
+    //Transforma o statement em um array que eu posso usar.
+    if ($email != "") {
+        if ($usuario['email'] == $email) {
+            if ($usuario['senha'] == $senha) {
+                echo 'login bem sucedido! <br>';
                 $_SESSION['email'] = $email;
-                $_SESSION['tipodeusuario'] = "medico";
+                $_SESSION['tipodeusuario'] = $usuario['tipo'];
+                header('location: /vittaclinic2/index.php');
             } else {
-                echo 'verifique sua senha';
+                echo 'Verifique sua senha.';
             }
         } else {
-            $tabela = "tabela_pacientes";
-            $stmt = $conn->prepare("SELECT email, senha FROM $tabela WHERE email='$email' AND senha='$senha'");
-            $stmt->execute();
-            $resultado =$stmt->SetFetchMode(PDO::FETCH_ASSOC);
-            foreach($stmt as $usuario);
-            if (($usuario['email'] == $email)) {
-                if($usuario['senha'] == $senha) {
-                    $_SESSION['email'] = $email;
-                    $_SESSION['tipodeusuario'] = "paciente";
-                } else {
-                    echo 'verifique sua senha';
-                }
-            } else {
-                echo 'verifique seu email';
-            }
+            echo 'Verifique seu email.';
         }
     }
 }
@@ -69,7 +47,7 @@ if (isset($usuario['email'])) {
 </head>
 <body>
     <p><a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a></p>
-    <?php
+    <?php //Sistema que escreve o usuario.
     if (isset($_SESSION['email'])) {
         echo 'usuario: ' . $_SESSION['email'] . ' tipo: ' . $_SESSION['tipodeusuario'];
     } else {
@@ -77,7 +55,6 @@ if (isset($usuario['email'])) {
     }
     ?>
     <p><h2>Entrar</h2></p>
-    <p>Nessa página o usuario deve poder fazer login.</p>
     <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
         Email: <input type="email" name="email"> <br>
         Senha: <input type="password" name="senha"> <br>
